2005-10-18  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c: Not compile cr_closure
	functions if PS/PDF surface isn't supported.

	* samples/pac.rb: Use Cairo::Context#fill_preserve.
	* samples/pac2.rb: ditto.

2005-10-17  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb
	(Cairo::Context#rounded_rectangle, Cairo::Context#circle):
	Added convenience methods.

	* samples/pac.rb: Port PDF::Writer sample.
	* samples/pac2.rb: ditto.

	* packages/cairo/ext/rb_cairo_context.c: Fixed wrong number of
	argument of Cairo::Context#identity_matrix.

2005-10-16  Ilmari Heikkinen  <kig@misfiring.net>

	* packages/cairo/ext/rb_cairo_context.c (cr_get_font_options):
	Fixed segmentation fault. Use cairo_font_options_create().
	* packages/cairo/ext/rb_cairo_surface.c
	(cr_surface_get_font_options): ditto.

	* packages/cairo/ext/rb_cairo_constants.c: Fixed
	typo. ANTIALIAS_NONO -> ANTIALIAS_NONE.

2005-10-16  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Added release 1.0.0.

2005-10-15  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: Use StringValuePtr
	instead of STR2CSTR.

	* packages/cairo/ext/rb_cairo_surface.c: Supported PS/PDF surface.
	* samples/ps.rb, samples/ps2.rb: Added PS surface sample.
	* samples/pdf.rb, samples/pdf2.rb: Added PDF surface sample.

2005-10-13  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c: Fixed a SEGV bug caused
	by Ruby's GC.
	(cr_image_surface_create_from_png_generic): Fixed a memory leak
	bug.

	* packages/cairo/ext/rb_cairo_pattern.c: Added
	Cairo::GradientPattern#add_color_stop_rgb and
	Cairo::GradientPattern#add_color_stop for convenience.

2005-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* samples/png.rb: Use Cairo::Context#set_source_rgb instead of
	Cairo::Context#set_source.

	* packages/cairo/ext/rb_cairo_context.c (cr_set_source_rgb):
	Re-implemented for backward compatibility.

	* samples/png.rb: Use Cairo::Context#set_source_rgba instead of